<resources>
    <!-- App -->
    <string name="app_name">New Project</string>
    <string name="app_version">Версия 1.0</string>
    <string name="app_copyrigh">© 2018 New Project Inc.</string>
    <string name="app_rights">All rights reserved.</string>
    <string name="app_logo">Логотип</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Activity_main_drawer -->
    <string name="activity_main_drawer_all_tasks">Все задачи</string>
    <string name="activity_main_drawer_my_tasks">Мои задачи</string>
    <string name="activity_main_drawer_settings">Настройки</string>
    <string name="activity_main_drawer_other">Разное</string>
    <string name="activity_main_drawer_about">О программе</string>

    <!-- User -->
    <string name="nav_header_main_photo">Фотография пользователя</string>
    <string name="nav_header_main_guest">Гость</string>
    <string name="nav_header_main_email">guest@mail.com</string>

    <!-- Login -->
    <string name="title_activity_login">Вход</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Телефон</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="error_invalid_email">Некорректный e-mail</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Некорректный пароль</string>
    <string name="error_field_required">Это поле обязательное</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Create Task -->
    <string name="title_activity_create_task">Новое объявление</string>
</resources>